syntax.bnf
<expr>		:== <term> <expr_tail>
<expr_tail>	:== '+' <term> <expr_tail> | '-' <term> <expr_tail> | epsilon
<term>		:== <unary> <term_tail>
<term_tail>	:== '*' <unary> <term_tail> | '/' <unary> <term_tail>
				'%' <unary> <term_tail> | epsilon
<unary>		:== '+' <unary> | '-' <unary> | <factor>
<factor>	:== '(' <expr> ')' | Num | Real
